--- a/templates/soutenance/index.html.twig
+++ b/templates/soutenance/index.html.twig
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_soutenance_new') }}">Create new</a>
+    <a href="{{ path('nouvel_soutenance') }}">Create new</a>
 {% endblock %}
