--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,85 @@
+{# templates/base.html.twig #}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    <title>{% block title %}TekUP{% endblock %}</title>
+    {% block stylesheets %}
+        <style type="text/css">
+            body {
+                padding-top: 60px;
+                padding-bottom: 40px;
+                margin-left: 200px; /* Give space for the sidebar */
+            }
+            #backgroundimage {
+                height: auto;
+                left: 0;
+                margin: 0;
+                min-height: 100%;
+                min-width: 674px;
+                padding: 0;
+                position: fixed;
+                top: 0;
+                width: 100%;
+                z-index: -1;
+            }
+            .sidebar {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 200px;
+                height: 100%;
+                background-color: #f8f9fa;
+                padding: 20px;
+                box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            }
+            .sidebar a {
+                display: block;
+                padding: 10px;
+                text-decoration: none;
+                color: #007bff;
+            }
+            .sidebar a:hover {
+                background-color: #ddd;
+            }
+            .content-wrapper {
+                margin-left: 220px; /* Add margin to avoid overlap with the sidebar */
+                margin-top: 20px;
+            }
+        </style>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="shortcut icon" href="{{ asset('ico/favicon.png') }}">
+    {% endblock %}
+</head>
+<body>
+<img id="backgroundimage" src="{{ asset('img/nos-small.JPG') }}" border="0" alt="">
+<div class="sidebar">
+    <h3>TekUp</h3>
+    <a href="/etudiant">Gestion de Etudiant</a>
+    <a href="/enseignant">Gestion de Enseignant</a>
+    <a href="/soutenance">Gestion de Soutenance</a>
+</div>
+<div class="content-wrapper">
+    {% block body %}
+        <div class="container-fluid">
+            {% block container %}
+                <h1>Wine List</h1>
+                <div id="content">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            {% endblock %}
+        </div>
+    {% endblock %}
+</div>
+{% block javascript %}
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+{% endblock %}
+</body>
 </html>
