--- a/templates/etudiant/_form.html.twig
+++ b/templates/etudiant/_form.html.twig
@@ -1,4 +1,8 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_row(form.nce) }}  <!-- Manually render the matricule field -->
+
+{{ form_row(form.nom) }}
+    {{ form_row(form.prenom) }}
+
+<button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
